--- a/templates/city.html
+++ b/templates/city.html
@@ -5,22 +5,14 @@
 {% endblock %}
 {% block content %}
 	<div class="header">
-		<h3>Major</h3>
-		<h1>{{ majors[0][1] }}</h1>
+		<h3>City</h3>
+		<h1>{{ cities[0][1] }}: {{ cities[0][2] }}</h1>
 	</div>
 	<div class="section">
-		{% for i in range(2, columnNames|length) %}
-        <b>{{ columnNames[i] }}</b>: {{ majors[0][i] }} <br>
+		{% for i in range(3, columnNames|length) %}
+        <b>{{ columnNames[i] }}</b>: {{ cities[0][i] }} <br>
    		{% endfor %}
 	</div>
-	{% if careers|length > 0 %}
-	<div class="section">
-		<h2>Careers</h2>
-		{% for i in range(0, careers|length) %}
-        <a href="../careers/{{ careers[i][1] }}" >{{ careers[i][0] }}</a> <br>
-   		{% endfor %}
-	</div>
-	{% endif %}
 	{% if universities|length > 0 %}
 	<div class="section">
 		<h2>Universities</h2>
@@ -29,4 +21,5 @@
    		{% endfor %}
 	</div>
 	{% endif %}
+	
 {% endblock %}
