--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>GradSearch</title>
-</head>
-<body>
-	{% for row in rows %}
-		<tr>
-			<td>{{ row[1] }}</td>
-			<td>{{ row[2] }}</td>
-		</tr>
-	{% endfor %}
-</body>
+<!doctype html>
+<html>
+  <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/entity_layout.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
+    <title>GladCap</title>
+  </head>
+  <body>
+    <div id="navbar">
+      <a href="/" id="logo"><img src="{{ url_for('static', filename='images/gradhat.png') }}"></a>
+      <div id="name">GladCap</div>
+    </div>
+    <div id="content home"></div>
+    <div id="footer">
+      {% block footer %}
+      &copy; Copyright 2017 by <a href="http://domain.invalid/">you</a>.
+      {% endblock %}
+    </div>
+  </body>
 </html>
