--- a/static/stylesheets/entity_layout.css
+++ b/static/stylesheets/entity_layout.css
@@ -1,8 +1,12 @@
 /*font-family: 'Playfair Display', serif;*/
+html {
+	height: 100%;
+}
 body {
 	margin: 0 !important;
 	font-family: 'Nunito', sans-serif !important;
 	background: #48BCA5;
+	height: 100%;
 }
 h3 {
 	color: #48BCA5;
@@ -25,6 +29,9 @@ a {
 }
 a:hover {
 	color: #48BCA5;
+}
+input:focus {
+	outline: none;
 }
 #navbar {
 	background: #48BCA5;
@@ -113,4 +120,140 @@ a:hover {
 	text-align: center;
 }
 
+/* Homepage */
+/* Override */
+.content {
+	background: none;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	height: calc(100% - 100px);
+	text-align: center;
+	margin-top: -20px;
+}
+#home h2 {
+	font-size: 24px;
+	color: white;
+	margin-bottom: 50px;
+}
 
+#home .button {
+	width: 170px;
+	padding: 7px 0px 7px 0px;
+	text-align: center;
+	background: white;
+	color: black;
+	opacity: 0;
+	display: inline-block;
+	margin-right: 25px;
+	font-size: 14px;
+	transition: 0.3s;
+	border-radius: 2px;
+	cursor: pointer;
+	font-weight: 700;
+}
+.button:last-child{
+	margin-right: 0px !important;
+}
+#home .button:hover {
+	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.content .inner {
+	position: relative;
+	top: 50%;
+	transform: translateY(calc(-50% + 0px));
+}
+.forms {
+	position: relative;
+    /* top: 50%; */
+    /* transform: translateY(-50%); */
+    margin-left: auto;
+    margin-right: auto;
+    height: 400px;
+    width: 600px;
+    
+}
+.form {
+	position: absolute;
+}
+.tab {
+	height: 30px;
+    line-height: 30px;
+    text-align: center;
+/*    text-transform: uppercase;*/
+    font-size: 10px;
+    width: 125px;
+    position: absolute;
+    background: white;    
+    font-weight: 700;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.tab:hover {
+	color: #48BCA5;
+}
+.form-content {
+	background: white;
+    position: absolute;
+    /* height: calc(100% - 25px); */
+    top: 25px;
+    /* width: 100%; */
+    height: 370px;
+    width: 450px;
+    padding: 0px 75px 0px 75px;
+}
+.form.active .tab {
+	-webkit-box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+    -moz-box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+    box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+	z-index: 2;
+}
+.form.active .form-content {
+	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+	z-index: 1;
+}
+.form#major .tab {
+	left: 125px;
+}
+.form#job .tab {
+	left: 250px;
+}
+.form-content h1 {
+	font-size: 32px;
+	text-align: left;
+	margin: 0px !important;
+}
+.form-content-inner {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.form-content-inner input[type="text"] {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	outline: none;
+	border: none;
+	border-bottom: 3px solid black;
+	font-size: 14px;
+	font-family: "Nunito";
+	margin-top: 20px;
+	transition: 0.3s;
+}
+.form-content-inner input[type="text"]:focus {
+	border-bottom: 3px solid #48BCA5;
+}
+.form-content-inner input[type="submit"] {
+	height: 30px;
+	width: 100px;
+	font-family: "Nunito";
+	background: #48BCA5;
+	border: none;
+	box-shadow: none;
+	color: white;
+	margin-left: auto;
+	margin-left: calc(100% - 100px);
+	font-size: 14px;
+	cursor: pointer;
+	margin-top: 20px;
+}
