--- a/templates/entity_layout.html
+++ b/templates/entity_layout.html
@@ -4,6 +4,7 @@
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/entity_layout.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
   </head>
