--- a/templates/entity_layout.html
+++ b/templates/entity_layout.html
@@ -12,6 +12,11 @@
     <div id="navbar">
       <a href="/" id="logo"><img src="{{ url_for('static', filename='images/gradhat.png') }}"></a>
       <div id="name">GladCap</div>
+      <div class="nav-buttons">
+        <a href="/universities" class="nav-item">Universities</a>
+        <a href="/majors" class="nav-item">Majors</a>
+        <a href="/careers" class="nav-item">Careers</a>
+      </div>
       <form id="search" action="/mini-search" method="post">
         <input type="text" name="keyword" placeholder="Search something...">
         <img src="{{ url_for('static', filename='images/search.png') }}">
