--- a/templates/home.html
+++ b/templates/home.html
@@ -51,13 +51,14 @@ Table Name: careers
     <div class="content" id="home">
     	<div class="inner">
         <div class="buttons">
-          <h1>What are you looking for?</h1><br>
+<!--           <h1>What are you looking for?</h1><br> -->
+          <img id="home-image" src="{{ url_for('static', filename='images/home3.png') }}"> <br>
           <div id="universities" class="button">Universities</div>
           <div id="majors" class="button">Majors</div>
           <div id="careers" class="button">Careers</div>
         </div>
         <div class="forms" style="display: none; opacity: 0;">
-          <div class="form" id="universities">
+          <div class="form" i="universities">
             <div class="tab">
               Universities
             </div>
