--- a/templates/home.html
+++ b/templates/home.html
@@ -58,7 +58,7 @@ Table Name: careers
           <div id="careers" class="button">Careers</div>
         </div>
         <div class="forms" style="display: none; opacity: 0;">
-          <div class="form" i="universities">
+          <div class="form" id="universities">
             <div class="tab">
               Universities
             </div>
