--- a/static/stylesheets/entity_layout.css
+++ b/static/stylesheets/entity_layout.css
@@ -46,6 +46,19 @@ table {
     table-layout : fixed;
     width: 100% !important;
 }
+select:focus {
+	outline: none;
+}
+select {
+	background: transparent;
+    border: none;
+   font-size: 12px;
+   padding: 5px; /* If you add too much padding here, the options won't show in IE */
+}
+#styled-select {
+	border: 1px solid #48BCA5;
+	display: inline-block;
+}
 .wide {
 	width: 300px;
 }
@@ -131,9 +144,11 @@ table {
 	margin-top: 25px;
 }
 #footer {
-	position: relative;
+	position: absolute;
 	bottom: 0px;
 	text-align: center;
+	padding: 10px 0px 10px 0px;
+	width: 100%;
 }
 
 /* Homepage */
@@ -185,7 +200,7 @@ table {
     /* transform: translateY(-50%); */
     margin-left: auto;
     margin-right: auto;
-    height: 400px;
+    height: 450px;
     width: 600px;
     
 }
@@ -214,7 +229,7 @@ table {
     /* height: calc(100% - 25px); */
     top: 25px;
     /* width: 100%; */
-    height: 370px;
+    height: 450px;
     width: 450px;
     padding: 0px 75px 0px 75px;
 }
@@ -357,4 +372,28 @@ table {
 	width: 400px;
 	display: block;
 	margin: 0 auto;
+}
+#scrolltop {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	padding: 10px 15px 10px 15px;
+	background: white;
+	color: black;
+	font-size: 12px;
+	text-align: center;
+	-webkit-box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+    -moz-box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+    box-shadow: 0px -4px 8px -1px rgba(0,0,0,0.24);
+    cursor: pointer;
+}
+#ohno {
+	height: 350px;
+    position: absolute;
+    /* margin: 0 auto; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    top: calc(50% + 30px);
+    transform: translateY(-50%) translateX(-50%);
+    left: 50%;
 }
